Gave the purple-section component a prop height to specify the height of each section which fixed the white space at the bottm of the page

--- a/src/app/shared/components/footer-project/footer-project.component.scss
+++ b/src/app/shared/components/footer-project/footer-project.component.scss
@@ -6,7 +6,7 @@ $white: rgb(255, 255, 255);
 .start-proj-container {
   display: flex;
   position: relative;
-  top: -15%;
+  top: -5rem;
   flex-flow: row wrap;
   margin: auto;
   border: 1px $navy solid;
