--- a/src/app/shared/components/purple-section/purple-section.component.scss
+++ b/src/app/shared/components/purple-section/purple-section.component.scss
@@ -2,7 +2,7 @@ $purple: rgb(129, 66, 245);
 
 .purple-container {
   background-color: $purple;
-  height: 300px;
+  // height: 400px;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
